<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/color_grey_custom"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <View
        android:id="@+id/tool_bar"
        android:layout_width="0dp"
        android:background="@color/white"
        android:layout_height="?attr/actionBarSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <androidx.appcompat.widget.SearchView
        android:id="@+id/et_search"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        app:iconifiedByDefault="false"
        app:queryHint="Search GitHub"
        android:layout_marginEnd="16dp"
        app:layout_constraintTop_toTopOf="@id/btn_back"
        app:layout_constraintStart_toEndOf="@id/btn_back"
        app:layout_constraintBottom_toBottomOf="@id/btn_back"
        app:layout_constraintEnd_toEndOf="parent"/>

    <ImageView
        android:id="@+id/btn_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:src="@drawable/ic_back"
        android:padding="8dp"
        app:layout_constraintBottom_toBottomOf="@id/tool_bar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/tool_bar"
        app:tint="@color/black" />

    <TextView
        android:id="@+id/tv_find_your_stuff"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_find_your_stuff"
        android:textSize="24sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/tool_bar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/tv_desc"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/tv_desc"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="15dp"
        android:fontFamily="@font/noto_sans"
        android:gravity="center"
        android:text="@string/tv_search_all_of_github_for_people_repositories_organizations_issues_and_pull_requests"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_find_your_stuff" />

    <TextView
        android:id="@+id/tv_recent_searches"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="15dp"
        android:fontFamily="@font/dm_sans"
        android:text="@string/tv_recent_searches"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size_18"
        android:textStyle="bold"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="@id/btn_back"
        app:layout_constraintTop_toBottomOf="@id/tool_bar" />

    <TextView
        android:id="@+id/tv_clear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/text_size_18"
        android:textColor="#2196F3"
        android:visibility="gone"
        android:fontFamily="@font/dm_sans"
        android:layout_marginEnd="16dp"
        android:text="@string/clear"
        app:layout_constraintTop_toTopOf="@id/tv_recent_searches"
        app:layout_constraintEnd_toEndOf="parent"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_history"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/tv_recent_searches"
        android:layout_marginTop="10dp"
        android:visibility="gone"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        android:orientation="vertical"
        tools:listitem="@layout/rc_item_history"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>


    <LinearLayout
        android:id="@+id/ll_repositories"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        android:visibility="gone"
        android:background="@color/white"
        android:foreground="@drawable/ripple_effect"
        android:orientation="horizontal"
        android:padding="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tool_bar">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/ic_repository_black_mini" />

        <TextView
            android:id="@+id/tv_repositories"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/dm_sans"
            android:layout_marginStart="16dp"
            android:text="@string/tv_repositories_with"
            android:textColor="@color/black"
            android:textSize="18sp" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_issues"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        android:visibility="gone"
        android:background="@color/white"
        android:foreground="@drawable/ripple_effect"
        android:orientation="horizontal"
        android:padding="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ll_repositories">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/ic_issues_black_mini" />

        <TextView
            android:id="@+id/tv_issues"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="16dp"
            android:fontFamily="@font/dm_sans"
            android:text="@string/tv_issues_with"
            android:textColor="@color/black"
            android:textSize="18sp" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_pull_requests"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:visibility="gone"
        android:focusable="true"
        android:background="@color/white"
        android:foreground="@drawable/ripple_effect"
        android:orientation="horizontal"
        android:padding="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ll_issues">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/ic_pull_requests_black_mini" />

        <TextView
            android:id="@+id/tv_pull_requests"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/dm_sans"
            android:layout_marginStart="16dp"
            android:text="@string/tv_pull_requests_with"
            android:textColor="@color/black"
            android:textSize="18sp" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_people"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:visibility="gone"
        android:background="@color/white"
        android:focusable="true"
        android:foreground="@drawable/ripple_effect"
        android:orientation="horizontal"
        android:padding="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ll_pull_requests">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/ic_user_2" />

        <TextView
            android:id="@+id/tv_people"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="16dp"
            android:fontFamily="@font/dm_sans"
            android:text="@string/tv_people_with"
            android:textColor="@color/black"
            android:textSize="18sp" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_organizations"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:visibility="gone"
        android:background="@color/white"
        android:focusable="true"
        android:foreground="@drawable/ripple_effect"
        android:orientation="horizontal"
        android:padding="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ll_people">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/ic_organization_black_mini" />

        <TextView
            android:id="@+id/tv_organizations"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="16dp"
            android:fontFamily="@font/dm_sans"
            android:text="@string/tv_organizations_with"
            android:textColor="@color/black"
            android:textSize="18sp" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_jump_to"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:visibility="gone"
        android:background="@color/white"
        android:focusable="true"
        android:foreground="@drawable/ripple_effect"
        android:orientation="horizontal"
        android:padding="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ll_organizations">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/ic_baseline_arrow_right_alt_24" />

        <TextView
            android:id="@+id/tv_jump_to"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/dm_sans"
            android:layout_gravity="center"
            android:layout_marginStart="16dp"
            android:text="@string/tv_jump_to"
            android:textColor="@color/black"
            android:textSize="18sp" />


    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>